# cpp-te

./: .gitignore  .python-version  CMakeLists.txt  LICENSE  Makefile  OpenCppCoverage.cfg  README.md  conanfile.py
.github/actions/compile/: action.yml
.github/workflows/: build_cmake_windows.yml  codeql-analysis.yml
demo/: CMakeLists.txt  animal.cpp  animal.hpp  animal2.hpp  animal2_visitor.hpp  animal_visitor.hpp  cow.hpp  demo.cpp  opengldrawer.cpp  opengldrawer.hpp  sheep.hpp
include/te/: default_visitor.hpp  pimpl.hpp  te.hpp
include/te2/: default_visitor.hpp  pimpl.hpp  pimpl_nocopy.hpp  pimpl_sharedptr.hpp  te2.hpp  typeinfo_pimpl.hpp  typeinfo_visitor.hpp  value.hpp
puml/: te.puml  te2.puml
src/: CMakeLists.txt  te.cpp  te2.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  circle.hpp  conanfile.py  example.cpp  opengldrawer.cpp  opengldrawer.hpp  rhombus.hpp  shape.cpp  shape.hpp  shape2.hpp  shape2_visitor.hpp  shape_visitor.hpp  square.hpp  triangle.hpp  visitor.hpp  visitor2.hpp
tests/: CMakeLists.txt  generate_shapes.hpp  get_sum.hpp  rectangle.hpp  rhombus.hpp  shape.hpp  shape2.hpp  shape2_visitor.hpp  shape_visitor.hpp  tests_tev.cpp  tests_tev2.cpp  tests_vv.cpp  triangle.hpp
tests/benchmark/: generate_shapes.hpp  shape2.hpp  shape2_visitor.hpp  shape2ti.hpp  shape_visitor.hpp  tests_tev2.cpp  tests_tev2ti.cpp  tests_vv.cpp
tests/benchmark/shape/: rectangle.hpp
